Sevkiyat barkod yazdırma düzenlendi.

--- a/NOVA/Views/Finans/DetayliRiskLimiti.cshtml
+++ b/NOVA/Views/Finans/DetayliRiskLimiti.cshtml
@@ -34,7 +34,7 @@
 
 <script>
     $(document).ready(() => {
-        $('#cari-isim-select').select2({ language: "tr" });
+        $('#cari-isim-select').select2({ language: "tr", minimumInputLength: 3, minimumResultsForSearch: 50 });
 
         ShowProgress();
         CarileriGetir();
