--- a/NOVA/Views/Finans/Partials/DetayliRiskLimiti/BorcAlacak.cshtml
+++ b/NOVA/Views/Finans/Partials/DetayliRiskLimiti/BorcAlacak.cshtml
@@ -94,9 +94,9 @@
 
             $('#TOPLAM_BAKIYE').html(ParaBirimiFormat(BAKIYE_TOPLAM)).css('background-color', BAKIYE_TOPLAM_YONU);
 
-            var TRY_SEMBOL_RENGI = ((TRY_Bilgi[0]?.TOPLAM_BORC ?? 0) == 0 && (TRY_Bilgi[0]?.TOPLAM_ALACAK ?? 0) == 0) ? '#d30e0eb8' : '#13ad1dbd';
-            var USD_SEMBOL_RENGI = ((USD_Bilgi[0]?.TOPLAM_BORC ?? 0) == 0 && (USD_Bilgi[0]?.TOPLAM_ALACAK ?? 0) == 0) ? '#d30e0eb8' : '#13ad1dbd';
-            var EUR_SEMBOL_RENGI = ((EUR_Bilgi[0]?.TOPLAM_BORC ?? 0) == 0 && (EUR_Bilgi[0]?.TOPLAM_ALACAK ?? 0) == 0) ? '#d30e0eb8' : '#13ad1dbd';
+            var TRY_SEMBOL_RENGI = TRY_Bilgi.length <= 0 ? '#d30e0eb8' : '#13ad1dbd';
+            var USD_SEMBOL_RENGI = USD_Bilgi.length <= 0 ? '#d30e0eb8' : '#13ad1dbd';
+            var EUR_SEMBOL_RENGI = EUR_Bilgi.length <= 0 ? '#d30e0eb8' : '#13ad1dbd';
 
             $('#TRY_SEMBOL_BORC_ALACAK').css('color', TRY_SEMBOL_RENGI);
             $('#USD_SEMBOL_BORC_ALACAK').css('color', USD_SEMBOL_RENGI);
