--- a/NOVA/Views/Finans/Partials/DetayliRiskLimiti/VadesineGoreBorclar.cshtml
+++ b/NOVA/Views/Finans/Partials/DetayliRiskLimiti/VadesineGoreBorclar.cshtml
@@ -87,14 +87,13 @@
             $('#VADESI_GELEN_BORC_BAKIYE_EUR').html(ParaBirimiFormat(EUR_TEMERRUT_BORC_BAKIYE)).css('background-color', EUR_TEMERRUT_BORC_BAKIYE_YONU);
             $('#VADESI_GELMEMIS_BORC_BAKIYE_EUR').html(ParaBirimiFormat(EUR_VADESI_GELMEMIS_BORC_BAKIYE)).css('background-color', EUR_VADESI_GELMEMIS_BORC_BAKIYE_YONU);
 
-            var TRY_SEMBOL_RENGI = ((TRY_Bilgi[0]?.TEMERRUT_BORC_BAKIYE ?? 0) == 0 && (TRY_Bilgi[0]?.VADESI_GELMEMIS_BORC_BAKIYE ?? 0) == 0) ? '#d30e0eb8' : '#13ad1dbd';
-            var USD_SEMBOL_RENGI = ((USD_Bilgi[0]?.TEMERRUT_BORC_BAKIYE ?? 0) == 0 && (USD_Bilgi[0]?.VADESI_GELMEMIS_BORC_BAKIYE ?? 0) == 0) ? '#d30e0eb8' : '#13ad1dbd';
-            var EUR_SEMBOL_RENGI = ((EUR_Bilgi[0]?.TEMERRUT_BORC_BAKIYE ?? 0) == 0 && (EUR_Bilgi[0]?.VADESI_GELMEMIS_BORC_BAKIYE ?? 0) == 0) ? '#d30e0eb8' : '#13ad1dbd';
+            var TRY_SEMBOL_RENGI = TRY_Bilgi.length <= 0 ? '#d30e0eb8' : '#13ad1dbd';
+            var USD_SEMBOL_RENGI = USD_Bilgi.length <= 0 ? '#d30e0eb8' : '#13ad1dbd';
+            var EUR_SEMBOL_RENGI = EUR_Bilgi.length <= 0 ? '#d30e0eb8' : '#13ad1dbd';
 
             $('#TRY_SEMBOL_VADE').css('color', TRY_SEMBOL_RENGI);
             $('#USD_SEMBOL_VADE').css('color', USD_SEMBOL_RENGI);
             $('#EUR_SEMBOL_VADE').css('color', EUR_SEMBOL_RENGI);
-
             resolve(true);
         });
     }
