--- a/NOVA/Views/Shared/_Layout_Genel.cshtml
+++ b/NOVA/Views/Shared/_Layout_Genel.cshtml
@@ -31,6 +31,7 @@
 
     <script type="text/javascript" src="\assets\vendor\js\helpers.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
     <style>
@@ -99,26 +100,26 @@
                 position: relative;
             }
 
-                .header  .profile .information {
+                .header .profile .information {
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     gap: 0.5rem;
                 }
 
-                    .header  .profile  .information  .photo {
+                    .header .profile .information .photo {
                         position: relative;
                         cursor: pointer;
                     }
 
-                        .header  .profile  .information  .photo  img {
+                        .header .profile .information .photo img {
                             width: 40px;
                             height: 40px;
                             border-radius: 50%;
                             object-fit: cover;
                         }
 
-                        .header  .profile  .information  .photo  .status {
+                        .header .profile .information .photo .status {
                             position: absolute;
                             bottom: 0;
                             right: 0;
@@ -129,7 +130,7 @@
                             border: 2px solid var(--container-color);
                         }
 
-                        .header  .profile .information  .photo  .context-menu {
+                        .header .profile .information .photo .context-menu {
                             position: absolute;
                             top: 3rem;
                             right: 0;
@@ -145,7 +146,7 @@
                             z-index: 1000;
                         }
 
-                            .header  .profile .information .photo .context-menu .context-menu-item {
+                            .header .profile .information .photo .context-menu .context-menu-item {
                                 text-decoration: none;
                                 display: flex;
                                 align-items: center;
@@ -194,6 +195,8 @@
             align-items: center;
             display: flex;
             background: #0000004d;
+            backdrop-filter: blur(3px);
+            -webkit-backdrop-filter: blur(3px);
         }
 
             #progress-overlay > img {
@@ -214,6 +217,8 @@
             justify-content: center;
             align-items: center;
             background: #0000004d;
+            backdrop-filter: blur(3px);
+            -webkit-backdrop-filter: blur(3px);
         }
 
         #menu-overlay {
@@ -228,6 +233,8 @@
             justify-content: center;
             align-items: center;
             background: #0000004d;
+            backdrop-filter: blur(3px);
+            -webkit-backdrop-filter: blur(3px);
         }
 
         @@keyframes Beat {
