--- a/NOVA/Views/Shared/_Layout_GenelMenu.cshtml
+++ b/NOVA/Views/Shared/_Layout_GenelMenu.cshtml
@@ -29,7 +29,7 @@
         bottom: 0;
         background-color: var(--container-color);
         z-index: 4500;
-        transition: width 0.3s;
+        transition: width 0.3s ease;
     }
 
         .side-menu::-webkit-scrollbar {
@@ -51,14 +51,14 @@
             height: 30px;
             width: auto;
             margin-right: 0.5rem;
-            transition: 0.3s;
+            transition: 0.3s ease;
         }
 
         .app-logo .text {
             height: 30px;
             width: auto;
             opacity: 0;
-            transition: 0.3s;
+            transition: 0.3s ease;
         }
 
     .app-logo-hover {
@@ -106,7 +106,7 @@
                 }
         .menu-item .fade-item {
             opacity: 0;
-            transition: opacity 0.3s;
+            transition: opacity 0.3s ease;
         }
 
     .side-menu .menu-item .inner-menu {
