--- a/NOVA/Views/Finans/Partials/DetayliRiskLimiti/DogrudanBorclandirmaSistemi.cshtml
+++ b/NOVA/Views/Finans/Partials/DetayliRiskLimiti/DogrudanBorclandirmaSistemi.cshtml
@@ -1,11 +1,9 @@
 ﻿<div class="card border-0 shadow-sm" style="min-height:285px;">
     <div class="card-body overflow-hidden h-100">
-        <h5 class="card-title text-center">DOĞRUDAN TAHSİLAT SİSTEMİ</h5>
+        <h5 class="card-title text-center mb-0">DOĞRUDAN TAHSİLAT SİSTEMİ</h5>
 
-        <div class="card-content d-flex justify-content-center align-items-center gap-3 pt-3">
-            <div id="dbs-grafik-alani" class="skeleton rounded-circle" style="height:160px;width:160px;">
-                <canvas id="DBSGrafik"></canvas>
-            </div>
+        <div class="card-content d-flex flex-column justify-content-center align-items-center">
+            <div id="dbs-grafik"></div>
 
             <div class="table-responsive w-100" style="font-size:smaller;">
                 <table class="table table-bordered table-sm align-middle text-center">
@@ -41,18 +39,6 @@
     </div>
 </div>
 
-<style>
-    .card-content {
-        flex-direction: row;
-    }
-
-    @@media (max-width: 576px) {
-        .card-content {
-            flex-direction: column;
-        }
-    }
-</style>
-
 <script>
     var DBSChart;
 
@@ -70,68 +56,81 @@
             $('#DG_GUNCEL_DBS_LIMIT').html(ParaBirimiFormat(DetayliRiskLimitiBilgileri[0]?.DG_GUNCEL_DBS_LIMIT ?? null));
             $('#TOPLAM_DBS_LIMIT').html(ParaBirimiFormat(DetayliRiskLimitiBilgileri[0]?.TOPLAM_DBS_LIMIT ?? null));
 
-            var Bilgi = (DetayliRiskLimitiBilgileri.length > 0) && !(NullOrZero(DetayliRiskLimitiBilgileri[0].YUKLENEN_DBS_FATURA) && NullOrZero(DetayliRiskLimitiBilgileri[0].DG_ODENMEMIS_DBS_TUTARI) && NullOrZero(DetayliRiskLimitiBilgileri[0].YUKLENMEYEN_DBS_FATURA) && NullOrZero(DetayliRiskLimitiBilgileri[0].DG_GUNCEL_DBS_LIMIT) && NullOrZero(DetayliRiskLimitiBilgileri[0].TOPLAM_DBS_LIMIT));
+            var EsasTutar = { name: 'ESAS TUTAR', data: [DetayliRiskLimitiBilgileri[0]?.YUKLENEN_DBS_FATURA ?? 0] };
+            var Degerlenmis = { name: 'DEĞERLENME MİKTARI', data: [(DetayliRiskLimitiBilgileri[0]?.DG_ODENMEMIS_DBS_TUTARI ?? 0) - (DetayliRiskLimitiBilgileri[0]?.YUKLENEN_DBS_FATURA ?? 0)] };
+            var GuncelDBSLimiti = { name: 'GÜNCEL DBS LİMİTİ', data: [DetayliRiskLimitiBilgileri[0]?.DG_GUNCEL_DBS_LIMIT ?? 0]};
 
-            Bilgi ? $('#dbs-grafik-alani').removeClass('skeleton') : $('#dbs-grafik-alani').addClass('skeleton');
+            var Toplam = (DetayliRiskLimitiBilgileri[0]?.YUKLENEN_DBS_FATURA ?? 0) + ((DetayliRiskLimitiBilgileri[0]?.DG_ODENMEMIS_DBS_TUTARI ?? 0) - (DetayliRiskLimitiBilgileri[0]?.YUKLENEN_DBS_FATURA ?? 0)) + (DetayliRiskLimitiBilgileri[0]?.DG_GUNCEL_DBS_LIMIT ?? 0);
+            var Fark = { name: 'Fark', data: [(DetayliRiskLimitiBilgileri[0]?.TOPLAM_DBS_LIMIT ?? 0) - Toplam]};
 
-            DBSChart.data.datasets = DBSGrafikVerisi();
-            DBSChart.update();
+            DBSChart.updateSeries([EsasTutar, Degerlenmis, GuncelDBSLimiti, Fark], true);
 
             resolve(true);
         });
     }
 
-    function DBSGrafikVerisi()
-    {
-        return [
-            {
-                backgroundColor: ['#233E8B', '#233E8B'],
-                data: [0, DetayliRiskLimitiBilgileri[0]?.TOPLAM_DBS_LIMIT ?? 0]
-            },
-            {
-                backgroundColor: ['#1EAE98', '#32cfb7'],
-                data: [DetayliRiskLimitiBilgileri[0]?.YUKLENMEYEN_DBS_FATURA ?? 0, 0]
-            },
-            {
-                backgroundColor: ['#88c3b5', '#99dbcb'],
-                data: [DetayliRiskLimitiBilgileri[0]?.YUKLENEN_DBS_FATURA ?? 0, DetayliRiskLimitiBilgileri[0]?.DG_ODENMEMIS_DBS_TUTARI ?? 0]
-            }
-        ];
-    }
-
     function DBSGrafikOlustur()
     {
-        const Grafik = document.getElementById('DBSGrafik').getContext("2d");
 
-        const Veri =
-        {
-            labels: ['ESAS TUTAR', 'DEĞERLENMİŞ', 'ESAS TUTAR', 'DEĞERLENMİŞ', 'ESAS TUTAR', 'DEĞERLENMİŞ'],
-            datasets: DBSGrafikVerisi()
-        };
-
-        const Ayar = {
-            type: 'pie',
-            data: Veri,
-            options: {
-                responsive: true,
-                plugins: {
-                    responsive: true,
-                    legend: {
-                        display: false
+        var options = {
+            series: [],
+            chart: {
+                type: 'bar',
+                height: 100,
+                width: 450,
+                stacked: true,
+                toolbar: {
+                    show: false
+                }
+            },
+            plotOptions: {
+                bar: {
+                    horizontal: true,
+                }
+            },
+            stroke: {
+                width: 0,
+                colors: ['#fff']
+            },
+            xaxis: {
+                categories: ['DBS'],
+                labels: {
+                    style: {
+                        fontSize: '10px',
+                        fontWeight: 500,
                     },
-                    tooltip: {
-                        callbacks: {
-                            label: function (context) {
-                                const labelIndex = (context.datasetIndex * 2) + context.dataIndex;
-                                return '₺' + context.formattedValue;
-                            }
-                        }
+                    formatter: function (val) {
+                        return ParaBirimiFormat(val)
                     }
                 }
             },
+            yaxis: {
+                title: {
+                    text: undefined
+                },
+            },
+            tooltip: {
+                y: {
+                    formatter: function (val) {
+                        return ParaBirimiFormat(val)
+                    }
+                }
+            },
+            fill: {
+                opacity: 1
+            },
+            legend: {
+                show: true,
+                position: 'top',
+                showForNullSeries: false,
+                showForZeroSeries: false,
+            },
+            dataLabels: {
+                enabled: false
+            }
         };
 
-
-        DBSChart = new Chart(Grafik, Ayar);
+        DBSChart = new ApexCharts(document.querySelector("#dbs-grafik"), options);
+        DBSChart.render();
     }
 </script>
