--- a/NOVA/Views/Satis/HammaddeListesi.cshtml
+++ b/NOVA/Views/Satis/HammaddeListesi.cshtml
@@ -270,7 +270,7 @@
                             </div>
                             <div class="col-sm">
                                  
-                                <i data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" title="" data-bs-original-title="<span style='font-size:8px'>Fiyat 0 olanları getirir.</span>" onclick="alert()" class="fa-solid fa-magnifying-glass" style="cursor:pointer"></i>
+                                <i data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" title="" data-bs-original-title="<span style='font-size:8px'>Fiyat 0 olanları getirir.</span>" onclick="alert1()" class="fa-solid fa-magnifying-glass" style="cursor:pointer"></i>
                             </div>
                         </div>
                         <div id="toplamlar">
@@ -595,7 +595,6 @@
         var genislikAlgorithm = $('#genislik').val()
         var menseiAlgorithm = $('#mensei').val()
         var kuralAlgorithm = $('#kural').val()
-
         if ($('#filter').val().length > 0) {
             var det = detayli.filter(x => filterAlgorithm.includes(x.RULOKODU));
 
@@ -1394,8 +1393,7 @@
                 $('#kural').append(newOption);
             }
         }
-
-
+        
         $('#table').bootstrapTable('filterBy', {
             RULOKODU: (filterAlgorithm.length > 0 ? filterAlgorithm : teslimfilter),
             RENKKODU: (plasiyerAlgorithm.length > 0 ? plasiyerAlgorithm : renkfilter),
@@ -1571,7 +1569,7 @@
         $("#detaygizle").hide();
         $("#toplamlar").hide();
     }
-    function alert() {
+    function alert1() {
         $('#table').bootstrapTable('filterBy', {
             TUTAR: 0
         })
