--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
@@ -163,8 +163,8 @@
                                             <span id="yazdirmaLabel" style="position: absolute; left: 2.1rem; top: 0.7rem; font-size: 0.7rem; pointer-events: none; opacity: 0;">YAZDIRMA</span>
                                         </div>
                                     </div>
-                                    <div class="col-12 col-sm-auto">
-                                        <select id="yazici" class="form-select" style="width:250px">
+                                    <div class="col-12 col-sm-auto" id="yazici-col" style="display:block;">
+                                        <select id="yazici" class="form-select" style="width:250px;"  onchange="YaziciSec(this.value)">
                                         </select>
                                     </div>
                                     <div class="col-12 col-md-12">
@@ -228,6 +228,35 @@
     </div>
 </div>
 
+
+
+
+<div class="modal fade" id="YaziciModal" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content" style="box-shadow: inset 0 0 15px #dbdbdb;">
+
+            <div class="modal-header" style="display: flex; flex-direction: column;">
+                <div class="row" style="display:flex;justify-content:center;align-items:center;">
+                    <h5 class="modal-title" style="text-align:center;"><b id="YaziciModalBarkod">BarkodNo</b><br /> barkod no'lu etiketi yazdırmak için lütfen yazıcı seçiniz.</h5>
+                </div>
+            </div>
+
+            <div class="modal-body d-flex justify-content-center align-items-center">
+                <select id="yazici-modal" class="form-select" style="width:100%" onchange="YaziciSecModal(this.value)">
+                </select>
+            </div>
+
+            <div class="modal-footer" style="display:flex;justify-content:center;align-items:center;">
+                <button class="btn btn-primary" type="button" onclick="SevkiyatCiktisiAl()">YAZDIR</button>
+                <button class="btn btn-danger" type="button" onclick="YaziciModalKapat()">KAPAT</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 <script>
     var Kalemler = [];
     var SilinecekKalemler = [];
@@ -271,28 +300,32 @@
         history.back();
         window.onpopstate = function () { history.forward(); };
 
-        $.getJSON('http://192.168.2.13:83/api/printers/list', function (data) {
-            var opt = $("<option>").val("Microsoft Print to PDF").text("Microsoft Print to PDF");
+        $.ajax({
+            url: 'http://192.168.2.13:83/api/printers/list',
+            type: 'GET',
+            error: (e) => { console.error(`Yazıcı Listesi Hata: ${e}`); },
+            success: (response) => {
+                $('#yazici').select2({ language: "tr", minimumResultsForSearch: 50 });
+                $('#yazici-modal').select2({ language: "tr", minimumResultsForSearch: 50 });
 
-            $('#yazici').append(opt);
-            for (let i = 0; i < data.length; i++) {
-                opt = $("<option>").val(data[i].PRINTER_NAME).text(data[i].PRINTER_NAME);
+                $('#yazici').html('');
+                $('#yazici-modal').html('');
 
-                $('#yazici').append(opt);
-            }
-        }).done(function () {
-            $('#yazici').select2(
-                {
-                    "language": {
-                        "noResults": function () {
-                            return "Sonuç bulunamadı.";
-                        }
-                    },
-                    escapeMarkup: function (markup) {
-                        return markup;
-                    }
+                response?.forEach((item) => {
+                    $('#yazici').append(new Option(item.PRINTER_NAME, item.PRINTER_NAME));
+                    $('#yazici-modal').append(new Option(item.PRINTER_NAME, item.PRINTER_NAME));
                 });
-        })
+
+                if (localStorage.getItem("yazici") == undefined || localStorage.getItem("yazici") == null || localStorage.getItem("yazici") == 'null')
+                {
+                    localStorage.setItem("yazici", $('#yazici').val());
+                }
+                else
+                {
+                    $('#yazici').val(localStorage.getItem("yazici"));
+                }
+            },
+        });
     }
 
     function GetSiparisDetailsWithStockCode(StokKodu) {
@@ -567,6 +600,8 @@
 
             $('#yazdirLabel').addClass('fadeOutAnimasyon');
             $('#yazdirmaLabel').addClass('fadeInAnimasyon');
+
+            $('#yazici-col').css('display', 'none');
         }
         else {
             $('#yazdirLabel').removeClass('fadeOutAnimasyon');
@@ -574,6 +609,8 @@
 
             $('#yazdirLabel').addClass('fadeInAnimasyon');
             $('#yazdirmaLabel').addClass('fadeOutAnimasyon');
+
+            $('#yazici-col').css('display', 'block');
         }
     }
 </script>
@@ -723,8 +760,7 @@
         GuncelSiparisBakiye();
         ModalKaydetButtonState();
 
-        if (GirisDepo != -1 )
-        {
+        if (GirisDepo != -1) {
             $("#StokAdlari").prop("disabled", false);
         }
     }
@@ -1077,8 +1113,7 @@
                     });
                 }
             }
-            else
-            {
+            else {
                 Swal.fire({
                     text: "Depo seçimi tamamlanmadan kayıt işlemi yapılamaz",
                     icon: "error",
@@ -1405,14 +1440,13 @@
     $('#ACIK2').on('change paste input', (e) => { LimitedDecimal(e, 1, true); });
     $('#ACIK2').on('blur', (e) => { FormatDecimal(e, 1); });
 
-    $('#Miktar1').on('change paste input', (e) => { LimitedDecimal(e, 2);  MiktarGirisKontrolu(); });
+    $('#Miktar1').on('change paste input', (e) => { LimitedDecimal(e, 2); MiktarGirisKontrolu(); });
     $('#Miktar1').on('blur', (e) => { FormatDecimal(e, 2, true); });
 
     $('#Miktar2').on('change paste input', (e) => { LimitedDecimal(e, 2); MiktarGirisKontrolu(); });
-    $('#Miktar2').on('blur', (e) => { FormatDecimal(e, 2, true);  });
+    $('#Miktar2').on('blur', (e) => { FormatDecimal(e, 2, true); });
 
-    function MiktarGirisKontrolu()
-    {
+    function MiktarGirisKontrolu() {
         var Durum = $("#Miktar1").val() == 0 || $("#Miktar2").val() == 0;
 
         $('#kalemkaydetbtn').prop('disabled', Durum);
@@ -1420,8 +1454,7 @@
     }
 
     function LimitedDecimal(e, Limit, StartWithZero = false) {
-        if (!StartWithZero && e.currentTarget.value.at(0) == "0")
-        {
+        if (!StartWithZero && e.currentTarget.value.at(0) == "0") {
             e.currentTarget.value = e.currentTarget.value.slice(-1, e.currentTarget.value.length);
         }
 
@@ -1443,12 +1476,10 @@
             e.currentTarget.value = parseFloat(e.currentTarget.value).toFixed(Fixed);
         }
         else {
-            if (SetMin)
-            {
+            if (SetMin) {
                 e.currentTarget.value = e.currentTarget.min;
             }
-            else
-            {
+            else {
                 e.currentTarget.value = null;
             }
         }
@@ -1551,7 +1582,7 @@
 
         return `<div class="d-flex justify-content-center align-items-center" style="gap:0.7rem;">
 
-        <div onclick="SevkiyatCiktisiAl('${index.SERI_NO}')"><i class="bi bi-printer-fill" style="color:#203289;font-size:x-large;" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="bottom" data-bs-html="true" data-bs-original-title="<span>Yazdır</span>"></i></div>
+        <div onclick="YaziciModalAc('${index.SERI_NO}')"><i class="bi bi-printer-fill" style="color:#203289;font-size:x-large;" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="bottom" data-bs-html="true" data-bs-original-title="<span>Yazdır</span>"></i></div>
 
         <div onclick="KalemBilgisiGoster(${index.ID})"><i class="bi bi-file-earmark-text-fill" style="color:#203289;font-size:x-large;" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="bottom" data-bs-html="true" data-bs-original-title="<span>Güncelle</span>"></i></div>
 
@@ -1586,8 +1617,9 @@
 </script>
 
 <script>
-    function SevkiyatCiktisiAl(BARKOD_NO)
+    function SevkiyatCiktisiAl(BARKOD_NO = null)
     {
+        BARKOD_NO = BARKOD_NO ?? $('#YaziciModalBarkod').html();
         var Printer = $('#yazici').val();
         var Kayit = Kalemler.filter(x => x.SERI_NO == BARKOD_NO);
 
@@ -1596,6 +1628,7 @@
         if (Kayit.length > 0)
         {
             var Model = {
+                "GRUP_ISIM": FiltreliDetay[0].GRUP_ISIM,
                 "BARKOD_NO": Kayit[0].SERI_NO,
                 "STOK_KODU": Kayit[0].STOK_KODU,
                 "STOK_ADI": Kayit[0].STOK_ADI,
@@ -1617,29 +1650,31 @@
                 url: "@Url.Action("SevkiyatBarkodCiktisi", "Sevkiyat")",
                 type: 'POST',
                 data: { "Model": Model, Yazdir: true, Yazici: Printer },
-                success: (data) =>
-                {
-                    if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent)
-                        || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(navigator.userAgent.substr(0, 4)))
-                    {
-                        const linkSource = `data:application/pdf;base64,${data}`;
-                        const downloadLink = document.createElement("a");
-                        const fileName = `${Kayit[0].SERI_NO}.pdf`;
-                        downloadLink.href = linkSource;
-                        downloadLink.download = fileName;
-                        downloadLink.click();
-                    }
-                    else
-                    {
-                        printJS({
-                            printable: data,
-                            type: 'pdf',
-                            base64: true
-                        });
-                    }
-                }
+                success: (data) => { YaziciModalKapat(); }
             });
         }
+    }
+
+    function YaziciModalAc(BarkodNo)
+    {
+        $('#yazici-modal').val(localStorage.yazici).trigger('change');
+        $('#YaziciModal').modal('show');
+        $('#YaziciModalBarkod').html(BarkodNo);
+    }
+
+    function YaziciModalKapat()
+    {
+        $('#YaziciModal').modal('hide');
+        $('#YaziciModalBarkod').html('-');
+    }
+
+    function YaziciSec(Value) {
+        localStorage.setItem('yazici', Value);
+    }
+
+    function YaziciSecModal(Value)
+    {
+        $('#yazici').val(Value).trigger('change');
     }
 </script>
 
@@ -1820,8 +1855,7 @@
                             if (SaveType == 0) {
                                 ButonAyarla(1);
 
-                                if (document.getElementById('StokAdlari').value != '')
-                                {
+                                if (document.getElementById('StokAdlari').value != '') {
                                     document.getElementById("Miktar1").disabled = false;
                                     document.getElementById("Miktar2").disabled = false;
                                 }
