--- a/NOVA/Views/Satis/HammaddeListesi.cshtml
+++ b/NOVA/Views/Satis/HammaddeListesi.cshtml
@@ -587,7 +587,7 @@
 
 
 
-    $('#toolbar').change(function (e) {
+    $('select').change(function (e) {
         var filterAlgorithm = $('#filter').val()
         var plasiyerAlgorithm = $('#renk').val()
         var kalinlikAlgorithm = $('#kalinlik').val()
